--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Gabarito&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Gabarito&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Gabarito', cursive;
+  font-family: "Gabarito", cursive;
 }
 
 .App {
@@ -13,9 +13,7 @@
   align-items: center;
   justify-content: center;
 
-background-image: url(./assets/fondo.jpg);
   height: auto;
-
 }
 .search {
   display: flex;
@@ -24,7 +22,7 @@ background-image: url(./assets/fondo.jpg);
   justify-content: center;
   height: auto;
   margin-top: 20px;
-} 
+}
 .search input {
   width: 300px;
   height: 40px;
@@ -33,18 +31,30 @@ background-image: url(./assets/fondo.jpg);
   padding: 5px;
   margin-bottom: 10px;
 }
-
-.products-contenedor {
+.inicio{
   display: flex;
-  flex-direction: column; 
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  width: 80%;
-
+  justify-content: center;
+  height: auto;
+  margin-top: 20px;
 
 }
 
-.product-card{
+.inicio p{
+  font-size: 1.5rem;
+  margin-bottom: 20px;
+
+}
+.products-contenedor {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+}
+
+.product-card {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -77,8 +87,8 @@ background-image: url(./assets/fondo.jpg);
 }
 
 .porcentaje p {
-font-size: 1.2rem;
-font-weight: bold;
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
 .product-header h5 {
@@ -87,24 +97,47 @@ font-weight: bold;
   margin: 5px;
 }
 
-.product-body{
+.product-body {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 100%;
   margin-top: 10px;
-
 }
 
-.cont-precios{
+.product-img {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+  height: 175px;
+  margin-right: 10px;
+}
+
+.product-img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+}
+
+.product-cont-desc{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  margin-left: 10px;
+}
+
+.cont-precios {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
   width: 100%;
   margin-top: 10px;
-
 }
 
 .Precio-lista-tachado {
@@ -112,27 +145,40 @@ font-weight: bold;
   font-size: 1.2rem;
 }
 
-.Precio-lista{
+.Precio-lista {
   font-size: 1.2rem;
   font-weight: bold;
 }
 
-.Precio-descuento{
+.segundo{
+  font-size: 1.2rem;
+  font-weight: bold;
+
+  margin: 10px;
+}
+
+.segundo span{
+  font-size: 1.5rem;
+
+  color: red;
+
+
+}
+
+.Precio-descuento {
   font-size: 1.2rem;
   font-weight: bold;
   color: red;
 }
 
-
-
-.Precio-efectivo{
+.Precio-efectivo {
   font-size: 1.2rem;
   font-weight: bold;
   margin-top: 60px;
   margin-bottom: 30px;
 }
 
-.product-footer-medidas{
+.product-footer-medidas {
   display: flex;
   align-items: center;
   width: 100%;
@@ -140,7 +186,7 @@ font-weight: bold;
   border-top: 1px solid #000;
 }
 
-.medidas-cont{
+.medidas-cont {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -150,7 +196,7 @@ font-weight: bold;
   font-size: 0.8rem;
 }
 
-.product-footer-info{
+.product-footer-info {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -159,4 +205,58 @@ font-weight: bold;
   margin-top: 10px;
   border-top: 1px solid #000;
 }
+.sk-chase {
+  width: 40px;
+  height: 40px;
+  position: relative;
+  animation: sk-chase 2.5s infinite linear both;
 
+}
+
+.sk-chase-dot {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0; 
+  animation: sk-chase-dot 2.0s infinite ease-in-out both; 
+}
+
+.sk-chase-dot:before {
+  content: '';
+  display: block;
+  width: 25%;
+  height: 25%;
+  background-color: #000;
+  border-radius: 100%;
+  animation: sk-chase-dot-before 2.0s infinite ease-in-out both; 
+}
+
+.sk-chase-dot:nth-child(1) { animation-delay: -1.1s; }
+.sk-chase-dot:nth-child(2) { animation-delay: -1.0s; }
+.sk-chase-dot:nth-child(3) { animation-delay: -0.9s; }
+.sk-chase-dot:nth-child(4) { animation-delay: -0.8s; }
+.sk-chase-dot:nth-child(5) { animation-delay: -0.7s; }
+.sk-chase-dot:nth-child(6) { animation-delay: -0.6s; }
+.sk-chase-dot:nth-child(1):before { animation-delay: -1.1s; }
+.sk-chase-dot:nth-child(2):before { animation-delay: -1.0s; }
+.sk-chase-dot:nth-child(3):before { animation-delay: -0.9s; }
+.sk-chase-dot:nth-child(4):before { animation-delay: -0.8s; }
+.sk-chase-dot:nth-child(5):before { animation-delay: -0.7s; }
+.sk-chase-dot:nth-child(6):before { animation-delay: -0.6s; }
+
+@keyframes sk-chase {
+  100% { transform: rotate(360deg); } 
+}
+
+@keyframes sk-chase-dot {
+  80%, 100% { transform: rotate(360deg); } 
+}
+
+@keyframes sk-chase-dot-before {
+  50% {
+    transform: scale(0.4); 
+  } 100%, 0% {
+    transform: scale(1.0); 
+  } 
+}
