--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
   height: auto;
 }
 .search {
@@ -27,25 +26,49 @@
   width: 300px;
   height: 40px;
   border-radius: 1rem;
-  border: 1px solid #000;
   padding: 5px;
   margin-bottom: 10px;
+  outline: none;
+  animation: input-animation 1s;
 }
-.inicio{
+
+
+@keyframes input-animation {
+  0% {
+    width: 0px;
+    border: 0px solid #000;
+  }
+
+  100% {
+    width: 300px;
+    border: 1px solid #000;
+  }
+}
+.search input:focus {
+  border: 2px solid #000;
+}
+
+.inicio {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: auto;
   margin-top: 20px;
-
 }
 
-.inicio p{
+.inicio p {
   font-size: 1.5rem;
   margin-bottom: 20px;
-
 }
+
+.inicio img {
+  width: 150px;
+  height: 80px;
+  margin-bottom: 20px;
+  border-radius: 1rem;
+}
+
 .products-contenedor {
   display: flex;
   flex-direction: column;
@@ -63,8 +86,25 @@
   margin-bottom: 20px;
   background-color: #ffff;
   border: 1px solid #000;
+  box-shadow: 0 0 10px rgba( 0, 0, 0, 0.3);
   border-radius: 1rem;
   padding: 10px;
+  animation: card-animation 1s;
+
+}
+
+@keyframes card-animation {
+  0% {
+    scale: 0.5;
+    width: 50%;
+    border: 0px solid #000;
+  }
+
+  100% {
+    scale: 1;
+    width: 80%;
+    border: 1px solid #000;
+  }
 }
 
 .product-header {
@@ -81,6 +121,7 @@
   top: 0;
   right: 0;
   background-color: red;
+  transition: 0.5s;
   color: #ffff;
   padding: 5px;
   border-radius: 0 0 0 1rem;
@@ -112,17 +153,20 @@
   justify-content: center;
   align-items: center;
   width: 40%;
-  height: 175px;
+  height: 150px;
   margin-right: 10px;
+
+
 }
 
 .product-img img {
   width: 100%;
   height: 100%;
   border-radius: 1rem;
+  box-shadow: 0 0 10px rgba( 0, 0, 0, 0.3)
 }
 
-.product-cont-desc{
+.product-cont-desc {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -150,25 +194,56 @@
   font-weight: bold;
 }
 
-.segundo{
+.segundo {
   font-size: 1.2rem;
   font-weight: bold;
-
   margin: 10px;
 }
 
-.segundo span{
+.segundo span {
   font-size: 1.5rem;
-
   color: red;
-
-
 }
 
 .Precio-descuento {
   font-size: 1.2rem;
   font-weight: bold;
   color: red;
+  animation: texto-fuego 2s infinite;
+}
+
+.fuego {
+  animation: fuego 2s infinite;
+}
+
+@keyframes fuego {
+  0% {
+    font-size: 1.18rem;
+  }
+  50% {
+    font-size: 1.09rem;
+  }
+  100% {
+    font-size: 1.18rem;
+  }
+}
+
+@keyframes texto-fuego {
+  0% {
+    color: red;
+  }
+  25% {
+    color: #ff6600;
+  }
+  50% {
+    color: #ff3300;
+  }
+  75% {
+    color: #ff0000;
+  }
+  100% {
+    color: #ff3300;
+  }
 }
 
 .Precio-efectivo {
@@ -210,7 +285,6 @@
   height: 40px;
   position: relative;
   animation: sk-chase 2.5s infinite linear both;
-
 }
 
 .sk-chase-dot {
@@ -218,45 +292,76 @@
   height: 100%;
   position: absolute;
   left: 0;
-  top: 0; 
-  animation: sk-chase-dot 2.0s infinite ease-in-out both; 
+  top: 0;
+  animation: sk-chase-dot 2s infinite ease-in-out both;
 }
 
 .sk-chase-dot:before {
-  content: '';
+  content: "";
   display: block;
   width: 25%;
   height: 25%;
   background-color: #000;
   border-radius: 100%;
-  animation: sk-chase-dot-before 2.0s infinite ease-in-out both; 
+  animation: sk-chase-dot-before 2s infinite ease-in-out both;
 }
 
-.sk-chase-dot:nth-child(1) { animation-delay: -1.1s; }
-.sk-chase-dot:nth-child(2) { animation-delay: -1.0s; }
-.sk-chase-dot:nth-child(3) { animation-delay: -0.9s; }
-.sk-chase-dot:nth-child(4) { animation-delay: -0.8s; }
-.sk-chase-dot:nth-child(5) { animation-delay: -0.7s; }
-.sk-chase-dot:nth-child(6) { animation-delay: -0.6s; }
-.sk-chase-dot:nth-child(1):before { animation-delay: -1.1s; }
-.sk-chase-dot:nth-child(2):before { animation-delay: -1.0s; }
-.sk-chase-dot:nth-child(3):before { animation-delay: -0.9s; }
-.sk-chase-dot:nth-child(4):before { animation-delay: -0.8s; }
-.sk-chase-dot:nth-child(5):before { animation-delay: -0.7s; }
-.sk-chase-dot:nth-child(6):before { animation-delay: -0.6s; }
+.sk-chase-dot:nth-child(1) {
+  animation-delay: -1.1s;
+}
+.sk-chase-dot:nth-child(2) {
+  animation-delay: -1s;
+}
+.sk-chase-dot:nth-child(3) {
+  animation-delay: -0.9s;
+}
+.sk-chase-dot:nth-child(4) {
+  animation-delay: -0.8s;
+}
+.sk-chase-dot:nth-child(5) {
+  animation-delay: -0.7s;
+}
+.sk-chase-dot:nth-child(6) {
+  animation-delay: -0.6s;
+}
+.sk-chase-dot:nth-child(1):before {
+  animation-delay: -1.1s;
+}
+.sk-chase-dot:nth-child(2):before {
+  animation-delay: -1s;
+}
+.sk-chase-dot:nth-child(3):before {
+  animation-delay: -0.9s;
+}
+.sk-chase-dot:nth-child(4):before {
+  animation-delay: -0.8s;
+}
+.sk-chase-dot:nth-child(5):before {
+  animation-delay: -0.7s;
+}
+.sk-chase-dot:nth-child(6):before {
+  animation-delay: -0.6s;
+}
 
 @keyframes sk-chase {
-  100% { transform: rotate(360deg); } 
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes sk-chase-dot {
-  80%, 100% { transform: rotate(360deg); } 
+  80%,
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes sk-chase-dot-before {
   50% {
-    transform: scale(0.4); 
-  } 100%, 0% {
-    transform: scale(1.0); 
-  } 
+    transform: scale(0.4);
+  }
+  100%,
+  0% {
+    transform: scale(1);
+  }
 }
