--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,6 @@
   animation: input-animation 1s;
 }
 
-
 @keyframes input-animation {
   0% {
     width: 0px;
@@ -86,11 +85,10 @@
   margin-bottom: 20px;
   background-color: #ffff;
   border: 1px solid #000;
-  box-shadow: 0 0 10px rgba( 0, 0, 0, 0.3);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   border-radius: 1rem;
   padding: 10px;
   animation: card-animation 1s;
-
 }
 
 @keyframes card-animation {
@@ -118,13 +116,33 @@
 }
 .porcentaje {
   position: absolute;
-  top: 0;
+  top: -7px;
   right: 0;
+  text-align: center;
   background-color: red;
   transition: 0.5s;
   color: #ffff;
-  padding: 5px;
-  border-radius: 0 0 0 1rem;
+  padding: 7px;
+  border-radius: 1rem;
+  animation: porcentaje-animation 1s;
+  animation-delay: 1s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes porcentaje-animation {
+  0% {
+    padding: 0px;
+    rotate: 0deg;
+  }
+  50% {
+    padding: 12px;
+    rotate: 10deg;
+  }
+
+  100% {
+    padding: 7px;
+    rotate: 0deg;
+  }
 }
 
 .porcentaje p {
@@ -155,15 +173,13 @@
   width: 40%;
   height: 150px;
   margin-right: 10px;
-
-
 }
 
 .product-img img {
   width: 100%;
   height: 100%;
   border-radius: 1rem;
-  box-shadow: 0 0 10px rgba( 0, 0, 0, 0.3)
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .product-cont-desc {
@@ -231,18 +247,16 @@
 @keyframes texto-fuego {
   0% {
     color: red;
-  }
-  25% {
-    color: #ff6600;
+    font-size: 1.3rem;
   }
   50% {
-    color: #ff3300;
-  }
-  75% {
-    color: #ff0000;
+    color: #000;
+    font-size: 1.2rem;
   }
   100% {
-    color: #ff3300;
+    color: red;
+    font-size: 1.3rem;
+
   }
 }
 
